Parser finished. Added runtime library project.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-/*/*.autosave
-/*/*.txt
-/*/*.exe
-/*/*.user
-/*/*.user.*
-/*.txt
-/*.exe
-/*.user
-/*.user.*
+*.autosave
+*.txt
+*.exe
+*.user
+*.user.*
+Makefile
+Makefile.*
+*.bc
+*.ll
