Changed mingw32-g++ to g++ on windows and removed -g flag.

--- a/bin/settings_win.ini
+++ b/bin/settings_win.ini
@@ -23,6 +23,6 @@ default-flags=-filetype=obj
 ; %1 = flags
 ; %2 = input file
 ; %3 = output file
-call=mingw32-g++ %1 %2 -o %3 -Lruntime/allegro-5.0.9-mingw-4.7.0/lib -lallegro-5.0.9-monolith-static-md -lfreetype-2.4.8-static-md -lopengl32 -lgdi32 -lwinmm -lpsapi -lshlwapi -lole32
-default-flags= -g
+call=g++ %1 %2 -o %3 -Lruntime/allegro-5.0.9-mingw-4.7.0/lib -lallegro-5.0.9-monolith-static-md -lfreetype-2.4.8-static-md -lopengl32 -lgdi32 -lwinmm -lpsapi -lshlwapi -lole32
+default-flags= 
 
