--- a/bin/settings_win.ini
+++ b/bin/settings_win.ini
@@ -24,5 +24,5 @@ default-flags=-filetype=obj
 ; %2 = input file
 ; %3 = output file
 call=g++ %1 %2 -o %3 -Lruntime/allegro-5.0.9-mingw-4.7.0/lib -lallegro-5.0.9-monolith-static-md -lfreetype-2.4.8-static-md -lopengl32 -lgdi32 -lwinmm -lpsapi -lshlwapi -lole32
-default-flags= 
+default-flags=-static-libstdc++
 
