Fixed settings_linux.ini and added a hard-coded path for the default font on linux

--- a/bin/settings_linux.ini
+++ b/bin/settings_linux.ini
@@ -23,6 +23,6 @@ default-flags=-filetype=obj
 ; %1 = flags
 ; %2 = input file
 ; %3 = output file
-call=g++ -g %1 %2 -o %3 -lallegro -lallegro_primitives -lallegro_acodec -lallegro_font -lallegro_ttf -lallegro_main
+call=g++ -g %1 %2 -o %3 -lallegro -lallegro_primitives -lallegro_acodec -lallegro_font -lallegro_image -lallegro_ttf -lallegro_main
 default-flags=
 
