Implemented the basis for custom data types defined in the runtime. Added bin/runtime/datatypes.json

--- a/bin/settings_win.ini
+++ b/bin/settings_win.ini
@@ -1,6 +1,9 @@
 [compiler]
 force-variable-declaration=false
 default-output-file=cbrun
+function-mapping=runtime/function-mapping.map
+runtime-library=runtime/libRuntime.bc
+data-types=runtime/data-types.json
 
 ;optimizer
 [opt]
