--- a/bin/settings_linux.ini
+++ b/bin/settings_linux.ini
@@ -1,6 +1,9 @@
 [compiler]
 force-variable-declaration=false
 default-output-file=cbrun
+function-mapping=runtime/functionmapping.map
+runtime-library=runtime/libRuntime.bc
+data-types=runtime/datatypes.json
 
 ;optimizer
 [opt]
