--- a/bin/settings_win.ini
+++ b/bin/settings_win.ini
@@ -11,7 +11,7 @@ data-types=runtime/datatypes.json
 ; %2 = input file
 ; %3 = output file
 call=opt %1 %2 -o %3
-default-flags=-O3
+default-flags=-O1
 
 ;native assembly generation
 [llc]
@@ -19,7 +19,7 @@ default-flags=-O3
 ; %2 = input file
 ; %3 = output file
 call=llc %1 %2 -o %3
-default-flags=-filetype=obj
+default-flags=-filetype=obj -O0
 
 ;native linker
 [linker]
@@ -27,5 +27,5 @@ default-flags=-filetype=obj
 ; %2 = input file
 ; %3 = output file
 call=g++ %1 %2 -o %3 -Lruntime/allegro-5.0.10/lib -lallegro-5.0.10-monolith-static-md -lfreetype-2.4.8-static-md -lopengl32 -lgdi32 -lwinmm -lpsapi -lshlwapi -lole32 -lGdiplus -lUuid
-default-flags=
+default-flags=-O0
 
