--- a/bin/settings_win.ini
+++ b/bin/settings_win.ini
@@ -18,8 +18,9 @@ default-flags=-O3
 ; %1 = flags
 ; %2 = input file
 ; %3 = output file
-call=llc %1 %2 -o %3
-default-flags=-filetype=obj -O3
+call=llvm-lto %1 %2 -o %3
+default-flags=-filetype=obj -exported-symbol="_WinMain@16"
+; -exported-symbol=main -exported-symbol=WinMain@16
 
 ;native linker
 [linker]
