--- a/bin/settings_win.ini
+++ b/bin/settings_win.ini
@@ -29,6 +29,6 @@ default-flags=-filetype=obj
 ; %1 = flags
 ; %2 = input file
 ; %3 = output file
-call=g++ %1 %2 -o %3 -Lruntime/allegro-5.0.10/lib -lallegro-5.0.10-monolith-static-md -lfreetype-2.4.8-static-md -lopengl32 -lgdi32 -lwinmm -lpsapi -lshlwapi -lole32 -lGdiplus -lUuid
+call=g++ %1 %2 -o %3 -Lruntime/allegro-5.0.10/lib -lallegro-5.0.10-monolith-static-md -lfreetype-2.4.8-static-md -lglu32 -lopengl32 -lgdi32 -lwinmm -lpsapi -lshlwapi -lole32 -lGdiplus -lUuid
 default-flags=-O4
 
