Fixed some bugs and created new ones.

--- a/bin/settings_win.ini
+++ b/bin/settings_win.ini
@@ -11,7 +11,7 @@ data-types=runtime/datatypes.json
 ; %2 = input file
 ; %3 = output file
 call=opt %1 %2 -o %3
-default-flags=-O3
+default-flags=-O1
 
 ;native assembly generation
 [llc]
@@ -19,7 +19,7 @@ default-flags=-O3
 ; %2 = input file
 ; %3 = output file
 call=llc %1 %2 -o %3
-default-flags=-filetype=obj
+default-flags=-filetype=obj -O0
 
 ;call=llvm-lto %1 %2 -o %3
 ;default-flags=-filetype=obj -exported-symbol="_WinMain@16"
@@ -30,5 +30,5 @@ default-flags=-filetype=obj
 ; %2 = input file
 ; %3 = output file
 call=g++ %1 %2 -o %3 -Lruntime/allegro-5.0.10/lib -lallegro-5.0.10-monolith-static-md -lfreetype-2.4.8-static-md -lglu32 -lopengl32 -lgdi32 -lwinmm -lpsapi -lshlwapi -lole32 -lGdiplus -lUuid
-default-flags=-O4
+default-flags=-g
 
