Added AdvancedMaths.cb includes Vector(1,2,3), Matrix4 and Quaternion maths.

--- a/bin/settings_win.ini
+++ b/bin/settings_win.ini
@@ -29,6 +29,6 @@ default-flags=-filetype=obj -O3
 ; %1 = flags
 ; %2 = input file
 ; %3 = output file
-call=g++ %1 %2 -o %3 -static-libgcc -static-libstdc++ -Lruntime/allegro-5.0.10/lib -lallegro-5.0.10-monolith-static-md -lfreetype-2.4.8-static-md -lglu32 -lopengl32 -lgdi32 -lwinmm -lpsapi -lshlwapi -lole32 -lGdiplus -lUuid
+call=g++ %1 %2 -o %3 -static-libgcc -static-libstdc++ -Lruntime/allegro-5.0.10/lib -lallegro-5.0.10-monolith-static-md -lallegro_audio-5.0.10-static-md -lallegro_acodec-5.0.10-static-md -lvorbis-1.3.2-static-mt -lopenal-1.14-static-mt -logg-1.2.1-static-mt -lFLAC-1.2.1-static-mt -ldumb-0.9.3-static-mt -lfreetype-2.4.8-static-md -lglu32 -lopengl32 -lgdi32 -lwinmm -lpsapi -lshlwapi -lole32 -lGdiplus -lUuid
 default-flags=-O3 
 
